<resources>
    <string name="app_name">BookAnalyzer</string>

    <string name="file_name">File name</string>
    <string name="unique_word_count">Unique word count</string>
    <string name="word_count">Word count</string>
    <string name="character_count">Character count</string>
    <string name="average_sentence_length_wrd">Average Sentence Length(words)</string>
    <string name="average_sentence_length_chr">Average Sentence Length(characters)</string>
    <string name="average_word_length">Average Word Length</string>
    <string name="list_button_text">List of words</string>

    <string name="unknown_author">Unknown</string>
    <string name="waiting_text">Analysing…</string>
    <string name="select_new_file">Select new file</string>
    <string name="search_books">Search books…</string>
    <string name="loading_content_started">Loading content…</string>
    <string name="loading_content_ended">Loading ended</string>

    <string name="start_screen_title">Books</string>
    <string name="analysis_activity_title">Analysis</string>
    <string name="loader_activity_title"> </string>
    <string name="word_list_activity_title">Word list</string>

    <string name="search_declined_message">Books are not searched</string>
    <string name="if_scan_message">Scan all books on device?</string>
    <string name="positive_response">Yes</string>
    <string name="negative_response">No</string>

    <string name="formats">Formats</string>
    <string name="epubFormat">epub</string>
    <string name="fb2Format">fb2</string>
    <string name="txtFormat">txt</string>
    <string name="search_in">Search in</string>
    <string name="downloads_dir">Downloads</string>
    <string name="all_dirs">All directories</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>

</resources>