<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
        android:elevation="4dp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@android:color/background_light"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/file_name"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bookNameView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:textColor="@color/purple"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/unique_word_count"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/uniqWordView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:textColor="@color/purple"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/word_count"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/allWordCountView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center_vertical|end"
                android:textColor="@color/purple"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="start|center_vertical"
                android:text="@string/character_count"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/allCharCountView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center_vertical|end"
                android:textColor="@color/purple"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="start|center_vertical"
                android:text="@string/average_sentence_length_wrd"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/avgSentenceLenInWordsView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center_vertical|end"
                android:textColor="@color/purple"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="start|center_vertical"
                android:text="@string/average_sentence_length_chr"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/avgSentenceLenInCharsView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center_vertical|end"
                android:textColor="@color/purple"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="start|center_vertical"
                android:text="@string/average_word_length"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/avgWordLenView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center_vertical|end"
                android:textColor="@color/purple"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/toWordListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/list_button_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>